Undefine problematic defines as e.g. introduced by windows.h in config-cmake.hh.in

--- a/src/config-cmake.hh.in
+++ b/src/config-cmake.hh.in
@@ -12,3 +12,10 @@
 // blitz++ specific defines
 #cmakedefine BZ_THREADSAFE
 #cmakedefine BZ_DEBUG
+
+// Undefine problematic defines as e.g. introduced by windows.h
+#undef small
+#undef min
+#undef max
+#undef abs
+#undef Complex
