--- a/src/tools/assignLayers/CMakeLists.txt
+++ b/src/tools/assignLayers/CMakeLists.txt
@@ -1,4 +1,12 @@
 add_executable(assignLayers assignLayers.cc)
-target_link_libraries(assignLayers LINK_PUBLIC IRoCS segmentation cmdline)
+
+if (BUILD_STATIC_TOOLS)
+  target_link_libraries(assignLayers PUBLIC "-static")
+  target_link_libraries(assignLayers
+    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    cmdline_static_tools)
+else()
+  target_link_libraries(assignLayers LINK_PUBLIC IRoCS segmentation cmdline)
+endif()
 
 install(TARGETS assignLayers RUNTIME DESTINATION bin)
