--- a/src/tools/attachIRoCS/CMakeLists.txt
+++ b/src/tools/attachIRoCS/CMakeLists.txt
@@ -1,4 +1,12 @@
 add_executable(attachIRoCS attachIRoCS.cc)
-target_link_libraries(attachIRoCS LINK_PUBLIC IRoCS segmentation cmdline)
+
+if (BUILD_STATIC_TOOLS)
+  target_link_libraries(attachIRoCS PUBLIC "-static")
+  target_link_libraries(attachIRoCS
+    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    cmdline_static_tools)
+else()
+  target_link_libraries(attachIRoCS LINK_PUBLIC IRoCS segmentation cmdline)
+endif()
 
 install(TARGETS attachIRoCS RUNTIME DESTINATION bin)
