--- a/src/tools/attachIRoCSToCellSegmentation/CMakeLists.txt
+++ b/src/tools/attachIRoCSToCellSegmentation/CMakeLists.txt
@@ -1,5 +1,13 @@
 add_executable(attachIRoCSToCellSegmentation attachIRoCSToCellSegmentation.cc)
-target_link_libraries(attachIRoCSToCellSegmentation
-  LINK_PUBLIC IRoCS segmentation cmdline)
+
+if (BUILD_STATIC_TOOLS)
+  target_link_libraries(attachIRoCSToCellSegmentation PUBLIC "-static")
+  target_link_libraries(attachIRoCSToCellSegmentation
+    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    cmdline_static_tools)
+else()
+  target_link_libraries(attachIRoCSToCellSegmentation
+    LINK_PUBLIC IRoCS segmentation cmdline)
+endif()
 
 install(TARGETS attachIRoCSToCellSegmentation RUNTIME DESTINATION bin)
