--- a/src/tools/detectNuclei/CMakeLists.txt
+++ b/src/tools/detectNuclei/CMakeLists.txt
@@ -1,4 +1,13 @@
 add_executable(detectNuclei detectNuclei.cc)
-target_link_libraries(detectNuclei LINK_PUBLIC IRoCS segmentation cmdline)
+
+if (BUILD_STATIC_TOOLS)
+  target_link_libraries(detectNuclei PUBLIC "-static")
+  target_link_libraries(detectNuclei
+    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    cmdline_static_tools)
+else()
+  target_link_libraries(detectNuclei
+    LINK_PUBLIC IRoCS segmentation cmdline)
+endif()
 
 install(TARGETS detectNuclei RUNTIME DESTINATION bin)
