--- a/src/tools/labelEpidermis/CMakeLists.txt
+++ b/src/tools/labelEpidermis/CMakeLists.txt
@@ -1,4 +1,12 @@
 add_executable(labelEpidermis labelEpidermis.cc)
-target_link_libraries(labelEpidermis LINK_PUBLIC IRoCS segmentation cmdline)
+
+if (BUILD_STATIC_TOOLS)
+  target_link_libraries(labelEpidermis PUBLIC "-static")
+  target_link_libraries(labelEpidermis
+    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    cmdline_static_tools)
+else()
+  target_link_libraries(labelEpidermis LINK_PUBLIC IRoCS segmentation cmdline)
+endif()
 
 install(TARGETS labelEpidermis RUNTIME DESTINATION bin)
