--- a/src/tools/trainLayerAssignmentForSegmentation/CMakeLists.txt
+++ b/src/tools/trainLayerAssignmentForSegmentation/CMakeLists.txt
@@ -1,6 +1,14 @@
 add_executable(trainLayerAssignmentForSegmentation
   trainLayerAssignmentForSegmentation.cc)
-target_link_libraries(trainLayerAssignmentForSegmentation
-  LINK_PUBLIC IRoCS segmentation cmdline)
+
+if (BUILD_STATIC_TOOLS)
+  target_link_libraries(trainLayerAssignmentForSegmentation PUBLIC "-static")
+  target_link_libraries(trainLayerAssignmentForSegmentation
+    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    cmdline_static_tools)
+else()
+  target_link_libraries(trainLayerAssignmentForSegmentation
+    LINK_PUBLIC IRoCS segmentation cmdline)
+endif()
 
 install(TARGETS trainLayerAssignmentForSegmentation RUNTIME DESTINATION bin)
