--- a/src/libProgressReporter_qt5/CMakeLists.txt
+++ b/src/libProgressReporter_qt5/CMakeLists.txt
@@ -24,6 +24,7 @@ if(WIN32)
   # On windows store DLLs alongside the binaries
   install(TARGETS ProgressReporter_qt5
     LIBRARY DESTINATION bin
+    RUNTIME DESTINATION bin
     ARCHIVE DESTINATION lib)
 else()
   install(TARGETS ProgressReporter_qt5
