--- a/src/lmbs2kit/CMakeLists.txt
+++ b/src/lmbs2kit/CMakeLists.txt
@@ -30,6 +30,7 @@ if(WIN32)
   # On windows store DLLs alongside the binaries
   install(TARGETS lmbs2kit
     LIBRARY DESTINATION bin
+    RUNTIME DESTINATION bin
     ARCHIVE DESTINATION lib)
 else()
   install(TARGETS lmbs2kit
