--- a/src/plugins/DetectSpheres/CMakeLists.txt
+++ b/src/plugins/DetectSpheres/CMakeLists.txt
@@ -23,6 +23,7 @@ if(WIN32)
   # On windows store DLLs alongside the binaries
   install(TARGETS PluginDetectSpheres
     LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
+    RUNTIME DESTINATION share/${PACKAGE}/plugins
     ARCHIVE DESTINATION lib)
 else()
   install(TARGETS PluginDetectSpheres
