--- a/src/libBlitz2DGraphics/CMakeLists.txt
+++ b/src/libBlitz2DGraphics/CMakeLists.txt
@@ -30,6 +30,7 @@ if(WIN32)
   # On windows store DLLs alongside the binaries
   install(TARGETS Blitz2DGraphics
     LIBRARY DESTINATION bin
+    RUNTIME DESTINATION bin
     ARCHIVE DESTINATION lib)
 else()
   install(TARGETS Blitz2DGraphics
