--- a/src/libProgressReporter/CMakeLists.txt
+++ b/src/libProgressReporter/CMakeLists.txt
@@ -21,6 +21,7 @@ if(WIN32)
   # On windows store DLLs alongside the binaries
   install(TARGETS ProgressReporter
     LIBRARY DESTINATION bin
+    RUNTIME DESTINATION bin
     ARCHIVE DESTINATION lib)
 else()
   install(TARGETS ProgressReporter
