--- a/src/libsvmtl/CMakeLists.txt
+++ b/src/libsvmtl/CMakeLists.txt
@@ -69,6 +69,7 @@ if(WIN32)
   # On windows store DLLs alongside the binaries
   install(TARGETS svmtl
     LIBRARY DESTINATION bin
+    RUNTIME DESTINATION bin
     ARCHIVE DESTINATION lib)
 else()
   install(TARGETS svmtl
