--- a/src/plugins/AttachIRoCSSCTToCellSegmentation/CMakeLists.txt
+++ b/src/plugins/AttachIRoCSSCTToCellSegmentation/CMakeLists.txt
@@ -30,6 +30,7 @@ if(WIN32)
   # On windows store DLLs alongside the binaries
   install(TARGETS PluginAttachIRoCSSCTToCellSegmentation
     LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
+    RUNTIME DESTINATION share/${PACKAGE}/plugins
     ARCHIVE DESTINATION lib)
 else()
   install(TARGETS PluginAttachIRoCSSCTToCellSegmentation
