Pre-Release Version Bump Guarded DLL_API macros to only be set on Windows

--- a/src/libIRoCS/CMakeLists.txt
+++ b/src/libIRoCS/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(IRoCS_VERSION_MAJOR 2) # Version bump to 3.0.0 pending
+set(IRoCS_VERSION_MAJOR 3)
 set(IRoCS_VERSION_MINOR 0)
 set(IRoCS_VERSION_PATCH 0)
 set(IRoCS_VERSION ${IRoCS_VERSION_MAJOR}.${IRoCS_VERSION_MINOR}.${IRoCS_VERSION_PATCH})
