Added segmentation editor L_T_C

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(libArrayToolbox)
 add_subdirectory(libsegmentation)
 add_subdirectory(liblabelling_qt4)
 add_subdirectory(labelling)
+add_subdirectory(L_T_C)
 add_subdirectory(libIRoCS)
 add_subdirectory(tools)
 add_subdirectory(plugins)
