--- a/src/libArrayToolbox/Makefile.am
+++ b/src/libArrayToolbox/Makefile.am
@@ -95,6 +95,7 @@ libArrayToolbox_la_SOURCES = \
 	algo/lmath.cc \
 	algo/lmorph.cc \
 	algo/lrootShapeAnalysis.cc \
+	algo/ltransform.cc \
 	RuntimeError.cc \
 	TypeTraits.cc \
 	SurfaceGeometry.cc \
